fix: view on mobile screen

--- a/src/components/sections/SectionPublicRooms/PublicRoomsListItem/index.module.css
+++ b/src/components/sections/SectionPublicRooms/PublicRoomsListItem/index.module.css
@@ -111,3 +111,9 @@
   height: 25px;
   z-index: 2;
 }
+
+@media screen and (max-width: 768px) {
+  .listItem {
+    max-width: 350px;
+  }
+}
