--- a/src/components/sections/SectionPublicRooms/index.module.css
+++ b/src/components/sections/SectionPublicRooms/index.module.css
@@ -40,3 +40,9 @@ h3 {
   padding: 20px 0;
   margin-bottom: 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .searchFilter {
+    justify-content: center;
+  }
+}
